# mouse-monitor-plugin

./: CMakeLists.txt  README.md  build_error_mouse.txt  build_error_mouse_2.txt  buildspec.json  deploy_macos.sh  mouse-monitor-plugin.cpp  mouse-monitor-plugin.hpp  mouse-settings-dialog.cpp  mouse-settings-dialog.hpp
.agents/rules/: project-architecture.md  project-security.md  project-spec.md
data/: mouse-broadcast-example.html  mouse-overlay.html
data/locale/: en-US.ini
local_frameworks/AGL.framework/: AGL  Info.plist
src/: mouse-monitor-plugin.cpp  mouse-monitor-plugin.hpp  mouse-settings-dialog.cpp  mouse-settings-dialog.hpp
